--- a/_sass/minimal-mistakes/skins/_avg.scss
+++ b/_sass/minimal-mistakes/skins/_avg.scss
@@ -8,8 +8,8 @@ $background-color: #ffffff !default;
 $text-color: #343434 !default;
 $muted-text-color: #505050 !default;
 $primary-color: #343434 !default;
-$border-color: lightsalmon !default;
-$footer-background-color: orange !default;
+$border-color: coral !default;
+$footer-background-color: coral !default;
 $link-color: #343434 !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
@@ -21,11 +21,11 @@ $masthead-link-color-hover: #343434 !default;
 $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
 
 .masthead {
-    background-color: orange;
+    background-color: $footer-background-color;
 }
 
 #site-nav {
-    background-color: orange;
+    background-color: $footer-background-color;
 }
 
 .teaser-home {
